linux/kubernetis/minio-distributed.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio

---

apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  type: NodePort
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      nodePort: 30000
    - name: console
      port: 9001
      targetPort: 9001
      nodePort: 30001

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio
spec:
  serviceName: "minio"
  replicas: 4
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - minio
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: minio
          image: minio/minio:latest
          args:
            - server
            - --console-address
            - ":9001"
            - http://minio-0.minio.minio.svc.cluster.local/data
            - http://minio-1.minio.minio.svc.cluster.local/data
            - http://minio-2.minio.minio.svc.cluster.local/data
            - http://minio-3.minio.minio.svc.cluster.local/data
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: manual
